# core

./: Cargo.toml
game/: Cargo.toml
game/src/: main.rs
pokedriver/: Cargo.toml
pokedriver/assets/texture/: boy.ron
pokedriver/assets/texture/players/: README.md
pokedriver/assets/texture/tiles/: tileset-bw.ron
pokedriver/config/: display.ron  input.ron
pokedriver/resources/spritedata/: framecount.json
pokedriver/src/: lib.rs
pokedriver/src/engine/: controller.rs  engine.rs  frame_sync.rs  input.rs  mod.rs  timer.rs
pokedriver/src/entity/: game.rs  mod.rs
pokedriver/src/entity/actor/: mod.rs  player.rs
pokedriver/src/entity/dialog/: mod.rs  talk_dialog.rs
pokedriver/src/entity/tile/: mod.rs  tile.rs
pokedriver/src/graphics/: actor.rs  components.rs  dialog.rs  fsync.rs  mod.rs  overworld.rs  sprite.rs  sprite_sync.rs  tile.rs
pokedriver/src/scripts/: mod.rs
pokedriver/src/scripts/actor/: loader.rs  mod.rs  player.rs
pokedriver/src/scripts/actor/player/: behaviour.rs  mod.rs  walk.rs
pokedriver/src/scripts/dialog/: mod.rs
pokedriver/src/scripts/dialog/talk_dialog/: mod.rs  talk.rs
pokedriver/src/state/: dialog.rs  game.rs  mod.rs
pokedriver/src/system/: bundle.rs  mod.rs
pokedriver/src/system/actor/: player.rs
pokedriver/src/system/actor/behaviour/: mod.rs  walk.rs
pokedriver/src/system/bundle/: mod.rs
pokedriver/src/system/dialog/: talk.rs
pokedriver/src/system/misc/: camera_translation.rs  mod.rs
pokedriver/src/system/tile/: mod.rs  static_tile.rs
pokedriver/src/utils/: debug.rs  mod.rs  path.rs  resolve.rs  resolver.rs
(+29 files in other folders)
