[package]
name = "pokedriver"
version = "0.1.0"
authors = ["supercmmetry <vishaals2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez="0.5.1"
gfx="0.18.2"
gfx_device_gl = "0.16.2"
cgmath={version="0.17.0", features=["mint"]}
rand="0.6.5"
