
[package]
name = "pokedriver"
version = "0.1.0"
authors = ["supercmmetry <vishaals2000@gmail.com>", "ATechnoHazard <amolele@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {version = "0.15.0", features = ["vulkan", "no-slow-safety-checks"]}